# trackable

./: .travis.yml  Cargo.toml  README.md
examples/: your_own_error_type_template.rs
src/: error.rs  lib.rs  macros.rs  result.rs  tests.rs
